[package]
name = "isomorphic-websockets-server"
version = "0.1.0"
authors = ["Hayden Faulds <fauldsh@gmail.com>", "Chinedu Francis Nwafili <frankie.nwafili@gmail.com>"]
publish = false
edition = "2018"

[dependencies]
chrono = "0.4.6"
isomorphic-websockets-app = { path = "../app" }
env_logger = "0.6.1"
virtual-dom-rs = { path = "../../../crates/virtual-dom-rs" }
ws = "0.8.1"
mime_guess = "2.0.1"
